feat: implement user authentication and dashboard features; update routing and styles